# kishai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_SETUP_SUMMARY.md  DEV_TOOLS_OVERVIEW.md  GETTING_STARTED.md  LOCAL_DEV.md  Makefile  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.sh  START_HERE.md  app.py  justfile  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  deployments.py  inference.py  models.py  monitoring.py
backend/app/auth/: __init__.py  schemas.py  security.py
backend/app/middleware/: isolation.py
backend/app/services/: deployment_service.py  llm_service.py  model_service.py  monitor_service.py
backend/app/utils/: encryption.py  logging.py
scripts/: verify_setup.py
tests/: __init__.py  conftest.py  test_main.py
